--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,1 @@
-<h3>Learning Angular</h3>
-
-<table>
-  <thead>
-    <th>Name</th>
-    <th>Email</th>
-    <th>Active</th>
-  </thead>
-  <tbody>
-    <ng-container *ngFor="let item of employees">
-      <tr *ngIf="item.IsActive ">
-        <td [ngStyle]="{color: item.Name === 'Salman' ? 'red' : 'blue'}"> {{item.Name | lowercase}} </td>
-        <td (click)="emailClicked(item.Email)"> {{item.Email}} </td>
-        <td> {{item.IsActive}} </td>
-      </tr>
-    </ng-container>
-  </tbody>
-</table>
+<router-outlet></router-outlet>
