Studied Input-Output & did Get API call

--- a/src/app/pages/employee-detail/employee-detail.component.html
+++ b/src/app/pages/employee-detail/employee-detail.component.html
@@ -5,3 +5,6 @@
   <p> {{employeeDetail.Email}} </p>
   <p> {{employeeDetail.IsActive}} </p>
 </div>
+
+<!--Child component data will come here-->
+<app-employee-department (childInvoked)="childMethodInvoked($event)" [employeeName]="employeeDetail.Name"></app-employee-department>
